icon fix looool

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test WA 1310</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="favicon" href="img/favicon.ico">
+    <link rel="stylesheet" href="styleGlobal.css">
 </head>
 <body>
     <h2 type="Nadpis" >Nadpis stranky</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quibusdam voluptatibus sunt ipsa magnam cumque beatae aliquid a nihil nulla, id nam hic, doloremque vitae fuga culpa perferendis? Architecto, minima?</p><br>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, doloribus corporis commodi rerum tempora veritatis assumenda ad quae esse vitae, nobis praesentium illo ea ut sapiente possimus? Quo, sint beatae.</p>
     <table>
+        <p type="tabulka" >Tabulka</p>
         <tr>
             <td>dx</td>
             <td>dx</td>
