--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,8 +4,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="stylesheet" href="styleGlobal.css">
 </head>
 <body>
-    
+    <h2>About Us</h2>
+    <div class="grid-container">
+        <div class="item">Instagram</div>
+        <div class="item2">Twitter</div>
+        <div class="item3">Facebook</div>
+        <div class="item4">Contact</div>
+        <div class="item5">Contact</div>
+        <div class="item6">Contact</div>
+    </div>
 </body>
 </html>
