--- a/newsletter.html
+++ b/newsletter.html
@@ -4,8 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newsletter</title>
+    <link rel="stylesheet" href="styleGlobal.css">
 </head>
 <body>
+    <h2>Newsletter</h2>
     <div class="flex-container">
         <div>Novinky1</div>
         <div>Novinky2</div>
