--- a/index.html
+++ b/index.html
@@ -7,10 +7,28 @@
     <link rel="icon" type="favicon" href="img/favicon.ico">
     <link rel="stylesheet" href="styleGlobal.css">
 </head>
+
+<header>
+    <h1 type="Nadpis">Nadpis</h1>
+</header>
 <body>
-    <h2 type="Nadpis" >Nadpis stranky</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quibusdam voluptatibus sunt ipsa magnam cumque beatae aliquid a nihil nulla, id nam hic, doloremque vitae fuga culpa perferendis? Architecto, minima?</p><br>
+    <nav>
+        <ul>
+            <li><a href="newsletter.html">Newsletter</a></li>
+            <li><a href="aboutUs.html">About us</a></li>
+            
+        </ul>
+    </nav>
+
+    <section>
+    <article>
+    <h2 type="NadpisMaly">Lorem</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod cupiditate recusandae accusantium earum expedita, doloribus quos, in corrupti magni, ducimus et est eligendi maiores excepturi. Culpa eos fugit ut adipisci.
+    Laudantium sunt quam incidunt repudiandae quo neque, quod blanditiis illo et at quasi vel repellendus consequuntur ipsum ut sint consectetur cupiditate quis sapiente dolorum. Dolorum, dignissimos! Minus quos sequi accusamus!</p><br>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, doloribus corporis commodi rerum tempora veritatis assumenda ad quae esse vitae, nobis praesentium illo ea ut sapiente possimus? Quo, sint beatae.</p>
+    <br>
+    <a href="img/auto1.jpg" target="_blank"><img src="img/auto1.jpg"></a>
+    <br>
     <table>
         <p type="tabulka" >Tabulka</p>
         <tr>
@@ -26,5 +44,10 @@
             <td>xd</td>
         </tr>
       </table>
+      </article>
+    </section>
+    <footer>
+        <p>FiXi SPSE Jecna</p>
+    </footer>
 </body>
 </html>
