--- a/newsletter.html
+++ b/newsletter.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newsletter</title>
+    <link rel="icon" type="favicon" href="img/favicon.ico">
     <link rel="stylesheet" href="styleGlobal.css">
 </head>
 <body>
