FINAL FINAL EDING TEST COMMINT XDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test WA 1310</title>
-    <link rel="icon" type="favicon" href="img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="styleGlobal.css">
 </head>
 
 <header>
-    <h1 type="Nadpis">Nadpis</h1>
+    <h1>Nadpis</h1>
 </header>
 <body>
     <nav>
@@ -22,15 +23,16 @@
 
     <section>
     <article>
-    <h2 type="NadpisMaly">Lorem</h2>
+    <h2>Lorem</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod cupiditate recusandae accusantium earum expedita, doloribus quos, in corrupti magni, ducimus et est eligendi maiores excepturi. Culpa eos fugit ut adipisci.
     Laudantium sunt quam incidunt repudiandae quo neque, quod blanditiis illo et at quasi vel repellendus consequuntur ipsum ut sint consectetur cupiditate quis sapiente dolorum. Dolorum, dignissimos! Minus quos sequi accusamus!</p><br>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, doloribus corporis commodi rerum tempora veritatis assumenda ad quae esse vitae, nobis praesentium illo ea ut sapiente possimus? Quo, sint beatae.</p>
     <br>
     <a href="img/auto1.jpg" target="_blank"><img src="img/auto1.jpg"></a>
     <br>
+    <p>Tabulka</p>
     <table>
-        <p type="tabulka" >Tabulka</p>
+        
         <tr>
             <td>dx</td>
             <td>dx</td>
